# morse-chugging

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  main.py  pyproject.toml
assets/: midi_notes.json  morse_dict.json  scales.json
example/: 1_chugs.mid  2_melodic_riffage.mid  5_utter_chaos.mid  chugs.mid  example.txt  melodic_riffage.mid  melody.mid  midi_output.mid  morse.mid
modules/: file_handler.py  file_manager.py  midi_generator.py  utils.py
modules/tests/: test_utils.py
src/: main.py
src/modules/: midi_generator.py  utils.py
