[project]
name = "morse-chugging"
version = "0.1.0"
description = "Manages dependencies of morse-chugging"
authors = [
    {name = "GrHalbgott"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "midiutil (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
